Splash screen implementation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:backgroundTint="#FFFFFF"
     android:clipToPadding="false"
     android:paddingBottom="0dp"
-    tools:context=".MainActivity">
+    tools:context=".presentation.MainActivity">
 
     <Button
         android:id="@+id/button3"
