--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,57 +6,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:backgroundTint="#FFFFFF"
+    android:backgroundTint="#FAFAFA"
     android:clipToPadding="false"
     android:paddingBottom="0dp"
     tools:context=".presentation.MainActivity">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="95dp"
-        android:backgroundTint="#EFD345"
-        android:elegantTextHeight="false"
-        android:ellipsize="none"
-        android:fontFamily="sans-serif-light"
-        android:freezesText="false"
-        android:includeFontPadding="false"
-        android:paddingTop="0dp"
-        android:paddingBottom="0dp"
-        android:text="+"
-        android:textAlignment="gravity"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#ECECEC"
-        android:textSize="70dp"
+    <ImageView
+        android:id="@+id/btn_add_game"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:srcCompat="@drawable/circle"
+        app:tint="#EDCE5C" />
+
+    <TextView
+        android:id="@+id/txt_add_game"
+        android:layout_width="0dp"
+        android:layout_height="115dp"
+        android:fontFamily="sans-serif-light"
+        android:text="+"
+        android:textAlignment="center"
+        android:textColor="#FAFAFA"
+        android:textSize="80sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_add_game"
+        app:layout_constraintEnd_toEndOf="@+id/btn_add_game"
+        app:layout_constraintStart_toStartOf="@+id/btn_add_game"
+        app:layout_constraintTop_toTopOf="@+id/btn_add_game" />
 
     <TextView
         android:id="@+id/jogos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:background="@color/main_purple"
+        android:fontFamily="sans-serif-thin"
+        android:paddingLeft="30dp"
+        android:paddingTop="25dp"
         android:text="Jogos"
-        android:textColor="#03A9F4"
-        android:textSize="24sp"
+        android:textColor="#FFFFFF"
+        android:textSize="36dp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/estatisticas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif"
-        android:text="Estatísticas"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/jogos"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -64,12 +58,23 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/txt_add_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jogos" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/jogos"
+        app:layout_constraintEnd_toEndOf="@+id/jogos"
+        app:srcCompat="@drawable/config"
+        app:tint="#FAFAFA" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
