--- a/app/src/main/res/layout/item_jogo.xml
+++ b/app/src/main/res/layout/item_jogo.xml
@@ -4,17 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#FAFAFA"
     android:paddingTop="5dp"
     android:paddingBottom="10dp">
 
-    <TextView
-        android:id="@+id/textView"
+    <ImageView
+        android:id="@+id/game_item_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:text="7 Wonders"
-        android:textSize="24sp"
+        android:layout_height="75dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="2dp"
+        android:tint="#CECDD1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/game_item" />
+
+    <TextView
+        android:id="@+id/txt_game_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="7 Wonders"
+        android:textColor="#FAFAFA"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="@+id/game_item_view"
+        app:layout_constraintStart_toStartOf="@+id/game_item_view"
+        app:layout_constraintTop_toTopOf="@+id/game_item_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
