--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -33,9 +33,9 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="90dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="25dp"
+        android:layout_width="92dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/dotted_circle"
         app:layout_constraintEnd_toEndOf="@+id/dotted_circle"
@@ -43,16 +43,14 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="20dp"
+        android:layout_width="13dp"
         android:layout_height="125dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="8dp"
         android:background="#F8F5F5"
         android:backgroundTint="#00FAF5F5"
         android:backgroundTintMode="add"
         android:rotation="180"
-        app:layout_constraintBottom_toBottomOf="@+id/dotted_circle"
-        app:layout_constraintStart_toStartOf="@+id/dotted_circle"
-        app:srcCompat="@drawable/linha_grossa" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        app:layout_constraintEnd_toStartOf="@+id/imageView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
