--- a/app/src/main/res/layout/activity_cronometro.xml
+++ b/app/src/main/res/layout/activity_cronometro.xml
@@ -17,9 +17,26 @@
         android:indeterminate="false"
         android:max="100"
         android:progress="100"
-        android:progressDrawable="@drawable/cronometro_circle_dark"
+        android:progressDrawable="@drawable/cronometro_circle_light"
         android:rotation="-90"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/cronometro_titulo_jogo"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="#B8B8B8"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:text="Conquistadores de Midgard"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,26 +47,28 @@
         android:backgroundTint="@color/main_purple"
         android:text="00:00:00"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="@+id/progressBar"
-        app:layout_constraintTop_toTopOf="@+id/progressBar" />
+        app:layout_constraintTop_toTopOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.511" />
 
     <ImageView
         android:id="@+id/icn_play"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="40dp"
         app:layout_constraintEnd_toStartOf="@+id/icn_pause"
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
         app:srcCompat="@drawable/icn_play" />
 
     <ImageView
         android:id="@+id/icn_pause"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         app:layout_constraintEnd_toEndOf="@+id/progressBar"
         app:layout_constraintStart_toStartOf="@+id/progressBar"
         app:layout_constraintTop_toTopOf="@+id/icn_play"
@@ -57,9 +76,9 @@
 
     <ImageView
         android:id="@+id/icn_stop"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="40dp"
         app:layout_constraintStart_toEndOf="@+id/icn_pause"
         app:layout_constraintTop_toTopOf="@+id/icn_pause"
         app:srcCompat="@drawable/icn_stop" />
@@ -72,8 +91,9 @@
         android:fontFamily="sans-serif"
         android:text="Encerrar partida"
         android:textColor="@color/main_purple"
-        android:textSize="38sp"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
