--- a/app/src/main/res/layout/activity_cronometro.xml
+++ b/app/src/main/res/layout/activity_cronometro.xml
@@ -27,10 +27,10 @@
     <TextView
         android:id="@+id/cronometro_titulo_jogo"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:background="#B8B8B8"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:text="Conquistadores de Midgard"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
