--- a/app/src/main/res/layout/item_jogo.xml
+++ b/app/src/main/res/layout/item_jogo.xml
@@ -23,13 +23,15 @@
 
     <TextView
         android:id="@+id/txt_game_item"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:text="7 Wonders"
         android:textColor="#FAFAFA"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/game_item_view"
+        app:layout_constraintEnd_toStartOf="@+id/txt_game_item2"
         app:layout_constraintStart_toStartOf="@+id/game_item_view"
         app:layout_constraintTop_toTopOf="@+id/game_item_view" />
 
@@ -40,7 +42,7 @@
         android:layout_marginEnd="8dp"
         android:text="7 Wonders"
         android:textColor="#FAFAFA"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/game_item_view"
         app:layout_constraintEnd_toEndOf="@+id/game_item_view"
         app:layout_constraintTop_toTopOf="@+id/game_item_view" />
