Ajustes layout activity jogos

--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -67,67 +67,67 @@
         android:id="@+id/txt_componentes"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
         android:fontFamily="sans-serif-medium"
         android:text="Componentes"
         android:textAlignment="gravity"
         android:textColor="#7EA6E0"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/nota_componentes"
-        app:layout_constraintStart_toEndOf="@+id/nota_componentes" />
+        app:layout_constraintEnd_toEndOf="@+id/nota_componentes"
+        app:layout_constraintStart_toStartOf="@+id/nota_componentes"
+        app:layout_constraintTop_toBottomOf="@+id/nota_componentes" />
 
     <TextView
         android:id="@+id/txt_experiencia"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:fontFamily="sans-serif-medium"
         android:text="Experiência"
         android:textAlignment="gravity"
         android:textColor="#7EA6E0"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/nota_experiencia"
-        app:layout_constraintStart_toEndOf="@+id/nota_experiencia" />
+        app:layout_constraintStart_toEndOf="@+id/txt_componentes"
+        app:layout_constraintTop_toBottomOf="@+id/nota_experiencia" />
 
     <TextView
         android:id="@+id/txt_mecanica"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="sans-serif-medium"
         android:text="Mecânica"
         android:textAlignment="gravity"
         android:textColor="#7EA6E0"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/nota_mecanica_pl1"
-        app:layout_constraintStart_toEndOf="@+id/nota_mecanica_pl1" />
+        app:layout_constraintEnd_toStartOf="@+id/txt_componentes"
+        app:layout_constraintTop_toBottomOf="@+id/nota_mecanica_pl1" />
 
     <TextView
         android:id="@+id/jogatinas_txt"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="sans-serif-medium"
         android:text="Jogatinas"
         android:textAlignment="gravity"
         android:textColor="#7EA6E0"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/jogatinas"
-        app:layout_constraintEnd_toEndOf="@+id/tempo_medio_txt"
-        app:layout_constraintStart_toStartOf="@+id/tempo_medio" />
+        app:layout_constraintStart_toEndOf="@+id/jogatinas" />
 
     <TextView
         android:id="@+id/tempo_medio_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:text="Tempo médio"
         android:textAlignment="center"
         android:textColor="#7EA6E0"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_experiencia"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.725"
+        app:layout_constraintStart_toEndOf="@+id/jogatinas_txt"
+        app:layout_constraintTop_toBottomOf="@+id/tempo_medio" />
 
     <TextView
         android:id="@+id/pontuacao_recorde_txt"
@@ -144,86 +144,89 @@
 
     <TextView
         android:id="@+id/nota_mecanica_pl1"
-        android:layout_width="37dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
         android:text="9,8"
         android:textColor="#7EA6E0"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/data_recorde_txt" />
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/txt_mecanica"
+        app:layout_constraintStart_toStartOf="@+id/txt_mecanica"
+        app:layout_constraintTop_toTopOf="@+id/nota_componentes" />
 
     <TextView
         android:id="@+id/jogatinas"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-medium"
         android:text="11"
         android:textColor="#7EA6E0"
         android:textSize="27sp"
-        app:layout_constraintEnd_toStartOf="@+id/jogatinas_txt"
-        app:layout_constraintTop_toTopOf="@+id/nota_mecanica_pl1" />
+        app:layout_constraintBottom_toTopOf="@+id/tempo_medio_txt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tempo_medio" />
 
     <TextView
         android:id="@+id/tempo_medio"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-medium"
         android:text="1h 43min"
         android:textColor="#7EA6E0"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tempo_medio_txt"
         app:layout_constraintEnd_toEndOf="@+id/tempo_medio_txt"
-        app:layout_constraintStart_toStartOf="@+id/tempo_medio_txt" />
+        app:layout_constraintStart_toStartOf="@+id/tempo_medio_txt"
+        app:layout_constraintTop_toBottomOf="@+id/separador" />
 
     <TextView
         android:id="@+id/nota_componentes"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-medium"
         android:text="10"
         android:textColor="#7EA6E0"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@+id/nota_mecanica_pl1"
-        app:layout_constraintTop_toBottomOf="@+id/nota_mecanica_pl1" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/separador"
+        app:layout_constraintStart_toEndOf="@+id/txt_mecanica"
+        app:layout_constraintStart_toStartOf="@+id/separador"
+        app:layout_constraintTop_toBottomOf="@+id/tempo_medio_txt" />
 
     <TextView
         android:id="@+id/nota_experiencia"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-medium"
         android:text="9"
         android:textColor="#7EA6E0"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@+id/nota_componentes"
-        app:layout_constraintTop_toBottomOf="@+id/nota_componentes" />
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/txt_experiencia"
+        app:layout_constraintStart_toStartOf="@+id/txt_experiencia"
+        app:layout_constraintTop_toTopOf="@+id/nota_componentes" />
 
     <ImageView
         android:id="@+id/separador"
         android:layout_width="300dp"
         android:layout_height="10dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@+id/icone_trofeu"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="@+id/icone_trofeu"
-        app:layout_constraintTop_toBottomOf="@+id/icone_estrela"
+        app:layout_constraintTop_toBottomOf="@+id/data_recorde_txt"
         app:srcCompat="@drawable/separador" />
 
     <TextView
         android:id="@+id/data_recorde_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="11/08/2022"
         android:textColor="#747475"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/separador"
         app:layout_constraintStart_toStartOf="@+id/separador"
-        app:layout_constraintTop_toBottomOf="@+id/separador" />
+        app:layout_constraintTop_toBottomOf="@+id/responsavel_recorde_txt" />
 
     <Button
         android:id="@+id/btn_jogar"
@@ -276,9 +279,13 @@
         android:id="@+id/btn_ir_historico"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:text="ver mais"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/nota_experiencia"
-        app:layout_constraintTop_toBottomOf="@+id/txt_experiencia" />
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#9DAAC7"
+        android:text="ver histórico de jogatinas"
+        android:textColor="#FAF7F7"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/separador"
+        app:layout_constraintStart_toStartOf="@+id/separador"
+        app:layout_constraintTop_toBottomOf="@+id/txt_componentes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
