--- a/app/src/main/res/drawable-anydpi/trofeu_estrela_icn.xml
+++ b/app/src/main/res/drawable-anydpi/trofeu_estrela_icn.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/main_purple"
+    android:tint="#69748C"
     android:alpha="0.8">
   <group android:scaleX="0.046875"
       android:scaleY="0.046875">
